kubernetes/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wasp-kafka-demo
  labels:
    app: wasp-kafka-demo
spec:
  selector:
    app: wasp-kafka-demo

  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
